# XYModem

./: .azure-pipelines.yml  .clang-format  .codecov.yml  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENCE.md  README.md  VERSIONS.md  format.sh  requirements.txt
XYModem/: CMakeLists.txt  CMakeSettings.json  conanfile.txt  setupDependencies.cmake
XYModem/.cmake/: clang.cmake  clangTidy.cmake  cppcheck.cmake  cpplint.cmake  gcc.cmake  includeWhatYouUse.cmake  xcode.cmake
XYModem/.conan/: linux_clang_profile  linux_profile  osx_profile  windows_profile
XYModem/build-tests-Desktop-Debug/: unitTest[1]_include.cmake
XYModem/build-tests-Desktop-Debug/.cmake/api/v1/reply/: cache-v2-594cac94494c16d7485b.json  cmakeFiles-v1-28e0103d863771b38742.json  codemodel-v2-16d87a873d2c8f9e30d4.json  index-2022-10-02T21-43-00-0578.json  target-unitTest-Debug-461a61342a8394c110a8.json
XYModem/build-tests-Desktop-Release/: qtcsettings.cmake  unitTest[1]_include.cmake
XYModem/build-tests-Desktop-Release/.cmake/api/v1/reply/: cache-v2-c6cb928a131a66fba2ac.json  cmakeFiles-v1-0a7d790f94da013363fd.json  codemodel-v2-83a2f7acd7125f055631.json  index-2022-10-02T21-44-29-0618.json  target-unitTest-Release-52b38337f4b04803f419.json
XYModem/examples/: CLIParser.cpp  CLIParser.h  CMakeLists.txt  example_xmodem.cpp  example_ymodem.cpp
XYModem/include/Backends/Devices/: SerialHandler.h
XYModem/include/Backends/Files/: DesktopFile.h
XYModem/include/Backends/Loggers/: Spdlogger.h
XYModem/include/XYModem/: FileTransferProtocol.h  Tools.h  XYModem.h  XYModemConst.h
XYModem/include/XYModem/Devices/: DeviceHandler.h  SerialHandler.h
XYModem/include/XYModem/Files/: DesktopFile.h  File.h
XYModem/include/XYModem/Loggers/: Logger.h  Spdlogger.h
XYModem/include/XYModem/Receivers/: XModemReceiver.h
XYModem/include/XYModem/Senders/: XModemSender.h  YModemSender.h
XYModem/src/: CMakeLists.txt  FileTransferProtocol.cpp  XYModem.cpp
XYModem/src/Backends/: CMakeLists.txt
XYModem/src/Backends/Devices/: SerialHandler.cpp
XYModem/src/Backends/Files/: DesktopFile.cpp
XYModem/src/Backends/Loggers/: Spdlogger.cpp
XYModem/src/Devices/: DeviceHandler.cpp
XYModem/src/Files/: DesktopFile.cpp  File.cpp
XYModem/src/Loggers/: Logger.cpp  Spdlogger.cpp
XYModem/src/Senders/: XModemSender.cpp  XModemSender.hpp  YModemSender.cpp  YModemSender.hpp
XYModem/src/XYModem/: CMakeLists.txt  FileTransferProtocol.cpp
XYModem/src/XYModem/Devices/: DeviceHandler.cpp
XYModem/src/XYModem/Files/: File.cpp
XYModem/src/XYModem/Loggers/: Logger.cpp
XYModem/src/XYModem/Receivers/: XModemReceiver.cpp
XYModem/src/XYModem/Senders/: XModemSender.hpp  YModemSender.hpp
XYModem/tests/: CMakeLists.txt  TestDesktopFile.cpp  TestFakeSerialHandler.cpp  TestFileTransferProtocole.cpp  TestRingBuffer.cpp  TestTools.cpp  TestXModemReceiver.cpp  TestXModemTransitions.cpp  TestXYModemHelper.cpp  TestYModemTransitions.cpp  main.cpp  testReceiverDestination.txt
XYModem/tests/Devices/: FakeSerialHandler.h  RingBuffer.h
